fix(footer): height on mobile

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -18,6 +18,7 @@ footer {
     flex-direction: column;
     padding: 15px;
     flex: 1;
+    height: 80px;
 
     p + p {
       margin-top: 10px;
